# eeg2meg

./: README.md  pyproject.toml
dataset/: build_dataset.py  preprocessing.py  utils.py
